syntax = "proto3";
package types;

import "google/protobuf/timestamp.proto";
// TODO: import tendermint proto types. Current import has errors, possibly on tendermint's end
option go_package = "/types";

message Height {
    int64 Height = 1;
}

message StoreBlock {
    bytes Hash = 1;
    int64 Height = 2;
    int64 NumTxs = 3;
    google.protobuf.Timestamp Time = 4;
    bytes Proposer = 5;
}

message StoreTx {
    int64 Height = 1;
    uint32 Index = 2;
    bytes Tx = 3;
    int64 TxHeight = 4;
    // Bytes-representation of rxresult. Could be nested resultTx struct
    bytes TxResult = 5;
}

message SendTx {
    bytes Hash = 1;
    StoreTx Store = 2;
}

message ItemList {
    repeated bytes items = 1;
}

message Validator {
    bytes Address = 1;
    // Bytes-representation of PubKey. Could be nested pubkey struct
    bytes PubKey = 2;
    int64 VotingPower = 3;
    int64 ProposerPriority = 4;
}